# bitdefender-rev-lab

./: .gitignore  README.MD
lib/: adb.py
permission_scanner/: argument_parser.py  scan.py
src/java/: Lab4Decrypter.java
src/python/: README.MD  pyproject.toml
src/python/aes_decrypter/: README.MD  decrypt.py
src/python/keygen/: keygen.py
src/python/lib/: README.MD  adb.py
src/python/permission_scanner/: README.MD  argument_parser.py  scan.py
src/python/rev_decrypter/: rev_decrypt.py
